--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
         }
 
         header h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
             font-weight: bold;
             margin-right: 30px;
         }
@@ -222,6 +222,73 @@
             margin-top: 20px;
             font-weight: bold;
             color: #388E3C;
+        }
+
+        /* Responsive Design for Landscape Mode */
+        @media (max-width: 1024px) {
+            header h1 {
+                font-size: 1.5rem;
+            }
+
+            .menu-toggle-container {
+                display: block;
+            }
+
+            .products-glance {
+                font-size: 2rem;
+            }
+
+            .slogan {
+                font-size: 1.8rem;
+            }
+
+            .products-grid {
+                grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            }
+
+            .product-item {
+                padding: 15px;
+            }
+
+            .section {
+                padding: 40px;
+                margin: 10px;
+            }
+
+            footer p {
+                font-size: 1rem;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .drawer {
+                left: -200px;
+            }
+
+            .drawer.active {
+                left: 0;
+            }
+
+            .products-glance {
+                font-size: 1.8rem;
+            }
+
+            .slogan {
+                font-size: 1.5rem;
+            }
+
+            .products-grid {
+                grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+            }
+
+            .product-item {
+                padding: 10px;
+            }
+
+            .section {
+                padding: 30px;
+                margin: 5px;
+            }
         }
     </style>
 </head>
