--- a/products.html
+++ b/products.html
@@ -24,12 +24,10 @@
         header {
             background-color: #4CAF50;
             color: white;
-            padding: 20px 0;
+            padding: 20px;
             display: flex;
             justify-content: flex-start;
             align-items: center;
-            padding-left: 20px;
-            padding-right: 20px;
             position: relative;
         }
 
@@ -63,18 +61,17 @@
         .menu-text {
             font-size: 1rem;
             color: white;
-            margin-top: -5px;
         }
 
         .drawer {
             position: fixed;
             top: 0;
-            left: -250px;
+            left: -250px; /* Consistent drawer closed state */
             width: 250px;
             height: 100%;
             background-color: #333;
             overflow-y: auto;
-            transition: left 0.3s ease;
+            transition: left 0.3s ease; /* Smooth transition */
             padding-top: 60px;
             z-index: 1000;
         }
@@ -93,7 +90,7 @@
         }
 
         .drawer.active {
-            left: 0;
+            left: 0; /* Fully open drawer state */
         }
 
         .drawer-group {
@@ -112,87 +109,12 @@
             background-color: #ffffff;
             border-radius: 12px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-        }
-
-        .section:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
         }
 
         .container {
             max-width: 100%;
             margin: 0 auto;
             padding: 20px;
-            box-sizing: border-box;
-        }
-
-        .products-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-        }
-
-        .product-item {
-            background-color: #f9fbe7;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            transition: all 0.3s ease;
-            cursor: pointer;
-        }
-
-        .product-item:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
-        }
-
-        .product-item img {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-            margin-bottom: 10px;
-        }
-
-        .product-item p {
-            font-size: 1.1rem;
-            font-weight: bold;
-            color: #388E3C;
-        }
-
-        /* Lightbox Styling */
-        .lightbox {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            justify-content: center;
-            align-items: center;
-            z-index: 2000;
-        }
-
-        .lightbox img {
-            max-width: 80%;
-            max-height: 80%;
-            object-fit: contain;
-            border-radius: 12px;
-        }
-
-        .lightbox.active {
-            display: flex;
-        }
-
-        .lightbox-close {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            font-size: 2rem;
-            color: white;
-            cursor: pointer;
         }
 
         footer {
@@ -206,24 +128,6 @@
             font-size: 1.2rem;
         }
 
-        /* Fix for the slogan */
-        .slogan {
-            font-size: 2rem;
-            font-weight: bold;
-            color: #388E3C;
-            text-align: center;
-            margin-top: 10px;
-        }
-
-        /* Styling for "Take a glance" section */
-        .products-glance {
-            font-size: 2.5rem; /* 10px larger than slogan */
-            text-align: center;
-            margin-top: 20px;
-            font-weight: bold;
-            color: #388E3C;
-        }
-
         /* Responsive Design for Landscape Mode */
         @media (max-width: 1024px) {
             header h1 {
@@ -233,61 +137,15 @@
             .menu-toggle-container {
                 display: block;
             }
-
-            .products-glance {
-                font-size: 2rem;
-            }
-
-            .slogan {
-                font-size: 1.8rem;
-            }
-
-            .products-grid {
-                grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            }
-
-            .product-item {
-                padding: 15px;
-            }
-
-            .section {
-                padding: 40px;
-                margin: 10px;
-            }
-
-            footer p {
-                font-size: 1rem;
-            }
         }
 
         @media (max-width: 768px) {
             .drawer {
-                left: -200px;
+                left: -250px; /* Matches the default drawer width */
             }
 
             .drawer.active {
                 left: 0;
-            }
-
-            .products-glance {
-                font-size: 1.8rem;
-            }
-
-            .slogan {
-                font-size: 1.5rem;
-            }
-
-            .products-grid {
-                grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-            }
-
-            .product-item {
-                padding: 10px;
-            }
-
-            .section {
-                padding: 30px;
-                margin: 5px;
             }
         }
     </style>
@@ -312,12 +170,7 @@
 
 <section id="home" class="section">
     <div class="container">
-        <div class="products-glance">
-            Take a glance at a few of our Products
-        </div>
-        <div class="slogan">
-            You want it fresh, we got it fresh!
-        </div>
+        <h2>Welcome to Valley View Farm</h2>
     </div>
 </section>
 
@@ -325,92 +178,8 @@
     <div class="container">
         <h2>About Us</h2>
         <p>At Valley View Farm, we take pride in cultivating fresh, high-quality crops and raising healthy poultry. Our farm focuses on growing a variety of seasonal vegetables and fruits, ensuring that our produce is always fresh and sustainable.</p>
-        <p>We also specialize in raising free-range chickens, providing you with fresh, organic eggs and poultry. Our commitment to animal welfare ensures that our chickens are raised in a natural, stress-free environment, producing eggs and meat that are healthy and full of flavor.</p>
     </div>
 </section>
-
-<section id="products" class="section">
-    <div class="container">
-        <h2>Our Products</h2>
-        <div class="products-grid">
-            <!-- Products 1 to 7 -->
-            <div class="product-item" onclick="openLightbox('products/image1.jpg')">
-                <p>Organic Beetroot</p>
-                <img src="products/image1.jpg" alt="Farm chickens feeding on layers feed">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image2.jpg')">
-                <p>Fresh harvest Beetroot</p>
-                <img src="products/image2.jpg" alt="Clean chicken barn interior">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image3.jpg')">
-                <p>Organic Cabbage</p>
-                <img src="products/image3.jpg" alt="Organic cabbage in a farm">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image4.jpg')">
-                <p>Well-Irrigated Crops</p>
-                <img src="products/image4.jpg" alt="Well-irrigated crop field">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image5.jpg')">
-                <p>Farm land</p>
-                <img src="products/image5.jpg" alt="Clean barn with healthy animals">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image6.jpg')">
-                <p>Organic Crops</p>
-                <img src="products/image6.jpg" alt="A-grade farm eggs on display">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image7.jpg')">
-                <p>Farm Fresh Produce</p>
-                <img src="products/image7.jpg" alt="Fresh farm produce arranged neatly">
-            </div>
-            
-            <!-- Skip 8 -->
-
-            <!-- Products 9 to 17 -->
-            <div class="product-item" onclick="openLightbox('products/image9.jpg')">
-                <p>Fresh farm harvest</p>
-                <img src="products/image9.jpg" alt="Farmers market stand with fresh produce">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image10.jpg')">
-                <p>Free-Range Poultry</p>
-                <img src="products/image10.jpg" alt="Free-range poultry raised on farm">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image11.jpg')">
-                <p>Fresh Eggs layers</p>
-                <img src="products/image11.jpg" alt="Fresh eggs in cartons">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image12.jpg')">
-                <p>Free rage Chickens</p>
-                <img src="products/image12.jpg" alt="Freshly harvested vegetables from farm">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image13.jpg')">
-                <p>Chicken bun</p>
-                <img src="products/image13.jpg" alt="Ripe tomatoes growing on the vine">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image14.jpg')">
-                <p>A-Grade Eggs</p>
-                <img src="products/image14.jpg" alt="Herb garden with various herbs">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image15.jpg')">
-                <p>Chickens </p>
-                <img src="products/image15.jpg" alt="Newly hatched chickens in the barn">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image16.jpg')">
-                <p>Feeding layers</p>
-                <img src="products/image16.jpg" alt="Fruit trees with ripe fruit on the farm">
-            </div>
-            <div class="product-item" onclick="openLightbox('products/image17.jpg')">
-                <p>Chicken coup</p>
-                <img src="products/image17.jpg" alt="Beautiful sunset over the farm landscape">
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Lightbox Modal -->
-<div class="lightbox" id="lightbox">
-    <img src="" alt="Enlarged product image">
-    <span class="lightbox-close" onclick="closeLightbox()">×</span>
-</div>
 
 <footer>
     <p>© 2025 Valley View Farm. All Rights Reserved.</p>
@@ -419,31 +188,24 @@
 <script>
     function toggleDrawer() {
         const drawer = document.getElementById('drawer');
-        drawer.classList.toggle('active');
+        if (drawer.classList.contains('active')) {
+            drawer.classList.remove('active');
+            drawer.style.left = '-250px'; // Explicitly set left to match closed state
+        } else {
+            drawer.classList.add('active');
+            drawer.style.left = '0'; // Explicitly set left to match open state
+        }
     }
 
     // Close the drawer if clicked outside
     document.addEventListener('click', function(event) {
         const drawer = document.getElementById('drawer');
         const menuToggleContainer = document.querySelector('.menu-toggle-container');
-        
-        // Check if the click is outside the drawer and menu toggle
         if (!menuToggleContainer.contains(event.target) && !drawer.contains(event.target) && drawer.classList.contains('active')) {
             drawer.classList.remove('active');
+            drawer.style.left = '-250px';
         }
     });
-
-    function openLightbox(imageSrc) {
-        const lightbox = document.getElementById('lightbox');
-        const lightboxImg = lightbox.querySelector('img');
-        lightboxImg.src = imageSrc;
-        lightbox.classList.add('active');
-    }
-
-    function closeLightbox() {
-        const lightbox = document.getElementById('lightbox');
-        lightbox.classList.remove('active');
-    }
 </script>
 
 </body>
