--- a/products.html
+++ b/products.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valley View Farm</title>
-    <style>
-        /* General Reset */
+/* General Reset */
         * {
             margin: 0;
             padding: 0;
@@ -24,10 +17,12 @@
         header {
             background-color: #4CAF50;
             color: white;
-            padding: 20px;
+            padding: 20px 0;
             display: flex;
             justify-content: flex-start;
             align-items: center;
+            padding-left: 20px;
+            padding-right: 20px;
             position: relative;
         }
 
@@ -61,17 +56,18 @@
         .menu-text {
             font-size: 1rem;
             color: white;
+            margin-top: -5px;
         }
 
         .drawer {
             position: fixed;
             top: 0;
-            left: -250px; /* Consistent drawer closed state */
+            left: -250px;
             width: 250px;
             height: 100%;
             background-color: #333;
             overflow-y: auto;
-            transition: left 0.3s ease; /* Smooth transition */
+            transition: left 0.3s ease;
             padding-top: 60px;
             z-index: 1000;
         }
@@ -90,7 +86,7 @@
         }
 
         .drawer.active {
-            left: 0; /* Fully open drawer state */
+            left: 0;
         }
 
         .drawer-group {
@@ -109,12 +105,87 @@
             background-color: #ffffff;
             border-radius: 12px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+        }
+
+        .section:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
         }
 
         .container {
             max-width: 100%;
             margin: 0 auto;
             padding: 20px;
+            box-sizing: border-box;
+        }
+
+        .products-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
+        }
+
+        .product-item {
+            background-color: #f9fbe7;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            transition: all 0.3s ease;
+            cursor: pointer;
+        }
+
+        .product-item:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
+        }
+
+        .product-item img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+            margin-bottom: 10px;
+        }
+
+        .product-item p {
+            font-size: 1.1rem;
+            font-weight: bold;
+            color: #388E3C;
+        }
+
+        /* Lightbox Styling */
+        .lightbox {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            z-index: 2000;
+        }
+
+        .lightbox img {
+            max-width: 80%;
+            max-height: 80%;
+            object-fit: contain;
+            border-radius: 12px;
+        }
+
+        .lightbox.active {
+            display: flex;
+        }
+
+        .lightbox-close {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            font-size: 2rem;
+            color: white;
+            cursor: pointer;
         }
 
         footer {
@@ -128,7 +199,33 @@
             font-size: 1.2rem;
         }
 
+        .slogan {
+            font-size: 2rem;
+            font-weight: bold;
+            color: #388E3C;
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .products-glance {
+            font-size: 2.5rem;
+            text-align: center;
+            margin-top: 20px;
+            font-weight: bold;
+            color: #388E3C;
+        }
+
         /* Responsive Design for Landscape Mode */
+        @media (orientation: landscape) {
+            .drawer {
+                left: -250px;
+            }
+
+            .drawer.active {
+                left: 0;
+            }
+        }
+
         @media (max-width: 1024px) {
             header h1 {
                 font-size: 1.5rem;
@@ -137,76 +234,58 @@
             .menu-toggle-container {
                 display: block;
             }
+
+            .products-glance {
+                font-size: 2rem;
+            }
+
+            .slogan {
+                font-size: 1.8rem;
+            }
+
+            .products-grid {
+                grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            }
+
+            .product-item {
+                padding: 15px;
+            }
+
+            .section {
+                padding: 40px;
+                margin: 10px;
+            }
+
+            footer p {
+                font-size: 1rem;
+            }
         }
 
         @media (max-width: 768px) {
             .drawer {
-                left: -250px; /* Matches the default drawer width */
+                left: -200px;
             }
 
             .drawer.active {
                 left: 0;
             }
-        }
-    </style>
-</head>
-<body>
 
-<header>
-    <div class="menu-toggle-container" onclick="toggleDrawer()">
-        <button class="menu-toggle">&#9776;</button>
-        <span class="menu-text">Menu</span>
-    </div>
-    <h1>Valley View Farm</h1>
-    <nav class="drawer" id="drawer">
-        <div class="drawer-group">
-            <a href="index.html">Home Page</a>
-            <a href="Prices and orders.html">Prices Page</a>
-            <a href="#about">About Us</a>
-            <a href="#products">Our Products</a>
-        </div>
-    </nav>
-</header>
+            .products-glance {
+                font-size: 1.8rem;
+            }
 
-<section id="home" class="section">
-    <div class="container">
-        <h2>Welcome to Valley View Farm</h2>
-    </div>
-</section>
+            .slogan {
+                font-size: 1.5rem;
+            }
 
-<section id="about" class="section">
-    <div class="container">
-        <h2>About Us</h2>
-        <p>At Valley View Farm, we take pride in cultivating fresh, high-quality crops and raising healthy poultry. Our farm focuses on growing a variety of seasonal vegetables and fruits, ensuring that our produce is always fresh and sustainable.</p>
-    </div>
-</section>
+            .products-grid {
+                grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+            }
 
-<footer>
-    <p>© 2025 Valley View Farm. All Rights Reserved.</p>
-</footer>
+            .product-item {
+                padding: 10px;
+            }
 
-<script>
-    function toggleDrawer() {
-        const drawer = document.getElementById('drawer');
-        if (drawer.classList.contains('active')) {
-            drawer.classList.remove('active');
-            drawer.style.left = '-250px'; // Explicitly set left to match closed state
-        } else {
-            drawer.classList.add('active');
-            drawer.style.left = '0'; // Explicitly set left to match open state
-        }
-    }
-
-    // Close the drawer if clicked outside
-    document.addEventListener('click', function(event) {
-        const drawer = document.getElementById('drawer');
-        const menuToggleContainer = document.querySelector('.menu-toggle-container');
-        if (!menuToggleContainer.contains(event.target) && !drawer.contains(event.target) && drawer.classList.contains('active')) {
-            drawer.classList.remove('active');
-            drawer.style.left = '-250px';
-        }
-    });
-</script>
-
-</body>
-</html>
+            .section {
+                padding: 30px;
+                margin: 5px;
