--- a/products.html
+++ b/products.html
@@ -67,17 +67,17 @@
         }
 
         .drawer {
-            position: fixed;
-            top: 0;
-            left: -250px;
-            width: 250px;
-            height: 100%;
-            background-color: #333;
-            overflow-y: auto;
-            transition: left 0.3s ease;
-            padding-top: 60px;
-            z-index: 1000;
-        }
+    position: fixed;
+    top: 0;
+    left: -250px; /* Drawer starts off-screen */
+    width: 250px;
+    height: 100%;
+    background-color: #333;
+    overflow-y: auto;
+    transition: left 0.3s ease;
+    padding-top: 60px;
+    z-index: 1000;
+}
 
         .drawer a {
             padding: 10px 15px;
@@ -229,8 +229,8 @@
             }
 
             .drawer.active {
-                left: 0;
-            }
+    left: 0; /* Drawer slides in */
+}
         }
 
         @media (max-width: 1024px) {
