--- a/products.html
+++ b/products.html
@@ -67,17 +67,17 @@
         }
 
         .drawer {
-    position: fixed;
-    top: 0;
-    left: -250px; /* Drawer starts off-screen */
-    width: 250px;
-    height: 100%;
-    background-color: #333;
-    overflow-y: auto;
-    transition: left 0.3s ease;
-    padding-top: 60px;
-    z-index: 1000;
-}
+            position: fixed;
+            top: 0;
+            left: -250px;
+            width: 250px;
+            height: 100%;
+            background-color: #333;
+            overflow-y: auto;
+            transition: left 0.3s ease;
+            padding-top: 60px;
+            z-index: 1000;
+        }
 
         .drawer a {
             padding: 10px 15px;
@@ -127,175 +127,123 @@
             box-sizing: border-box;
         }
 
-        .products-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-        }
-
-        .product-item {
-            background-color: #f9fbe7;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            transition: all 0.3s ease;
-            cursor: pointer;
-        }
-
-        .product-item:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
-        }
-
-        .product-item img {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-            margin-bottom: 10px;
-        }
-
-        .product-item p {
-            font-size: 1.1rem;
-            font-weight: bold;
-            color: #388E3C;
-        }
-
-        /* Lightbox Styling */
-        .lightbox {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            justify-content: center;
-            align-items: center;
-            z-index: 2000;
-        }
-
-        .lightbox img {
-            max-width: 80%;
-            max-height: 80%;
-            object-fit: contain;
-            border-radius: 12px;
-        }
-
-        .lightbox.active {
-            display: flex;
-        }
-
-        .lightbox-close {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            font-size: 2rem;
-            color: white;
-            cursor: pointer;
-        }
-
-        footer {
-            background-color: black;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-        }
-
-        footer p {
-            font-size: 1.2rem;
-        }
-
-        .slogan {
-            font-size: 2rem;
-            font-weight: bold;
-            color: #388E3C;
-            text-align: center;
-            margin-top: 10px;
-        }
-
-        .products-glance {
-            font-size: 2.5rem;
+        .centered-comment {
+            font-size: 3rem;
             text-align: center;
             margin-top: 20px;
             font-weight: bold;
             color: #388E3C;
         }
 
-        /* Responsive Design for Landscape Mode */
-        @media (orientation: landscape) {
-            .drawer {
-                left: -250px;
-            }
-
-            .drawer.active {
-    left: 0; /* Drawer slides in */
-}
+        .slogan {
+            font-size: 2.5rem;
+            text-align: center;
+            margin-top: 20px;
+            font-weight: bold;
+            color: #4CAF50;
         }
 
+        .products-glance {
+            font-size: 2rem;
+            text-align: center;
+            font-weight: bold;
+            color: #388E3C;
+        }
+
+        .products-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
+            padding-top: 20px;
+        }
+
+        .product-item {
+            text-align: center;
+            cursor: pointer;
+        }
+
+        .product-item img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+
+        .product-item p {
+            font-size: 1.2rem;
+            font-weight: bold;
+            color: #388E3C;
+        }
+
+        /* Lightbox Styles */
+        .lightbox {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 1001;
+        }
+
+        .lightbox img {
+            max-width: 80%;
+            max-height: 80%;
+            border-radius: 12px;
+        }
+
+        .lightbox-close {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            color: white;
+            font-size: 2rem;
+            cursor: pointer;
+        }
+
+        /* Footer Styling */
+        footer {
+            background-color: #000;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        /* Media Queries for Landscape Mode */
         @media (max-width: 1024px) {
+            .products-grid {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
+
+        @media (max-width: 768px) {
             header h1 {
-                font-size: 1.5rem;
-            }
-
-            .menu-toggle-container {
-                display: block;
-            }
-
-            .products-glance {
-                font-size: 2rem;
-            }
-
-            .slogan {
-                font-size: 1.8rem;
+                font-size: 1.6rem;
             }
 
             .products-grid {
-                grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            }
-
-            .product-item {
-                padding: 15px;
+                grid-template-columns: repeat(2, 1fr);
             }
 
             .section {
                 padding: 40px;
                 margin: 10px;
             }
-
-            footer p {
-                font-size: 1rem;
-            }
         }
 
-        @media (max-width: 768px) {
-            .drawer {
-                left: -200px;
-            }
-
-            .drawer.active {
-                left: 0;
-            }
-
-            .products-glance {
-                font-size: 1.8rem;
-            }
-
-            .slogan {
-                font-size: 1.5rem;
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 1.4rem;
             }
 
             .products-grid {
-                grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+                grid-template-columns: 1fr;
             }
 
-            .product-item {
-                padding: 10px;
-            }
-
-            .section {
-                padding: 30px;
-                margin: 5px;
+            .menu-toggle {
+                font-size: 2rem;
             }
         }
     </style>
@@ -311,7 +259,7 @@
     <nav class="drawer" id="drawer">
         <div class="drawer-group">
             <a href="index.html">Home Page</a>
-            <a href="Prices and orders.html">Prices Page</a>
+            <a href="products.html">Products Page</a>
             <a href="#about">About Us</a>
             <a href="#products">Our Products</a>
         </div>
@@ -412,7 +360,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> 
 
 <!-- Lightbox Modal -->
 <div class="lightbox" id="lightbox">
@@ -421,36 +369,33 @@
 </div>
 
 <footer>
-    <p>© 2025 Valley View Farm. All Rights Reserved.</p>
+    <p>&copy; 2025 Valley View Farm. All rights reserved.</p>
 </footer>
 
 <script>
     function toggleDrawer() {
-        const drawer = document.getElementById('drawer');
-        drawer.classList.toggle('active');
+        document.getElementById('drawer').classList.toggle('active');
     }
 
-    // Close the drawer if clicked outside
-    document.addEventListener('click', function(event) {
-        const drawer = document.getElementById('drawer');
-        const menuToggleContainer = document.querySelector('.menu-toggle-container');
-        
-        // Check if the click is outside the drawer and menu toggle
-        if (!menuToggleContainer.contains(event.target) && !drawer.contains(event.target) && drawer.classList.contains('active')) {
-            drawer.classList.remove('active');
+    // Close drawer when clicked outside
+    window.onclick = function(event) {
+        if (!event.target.matches('.menu-toggle') && !event.target.matches('.drawer') && !event.target.matches('.menu-toggle-container')) {
+            const drawer = document.getElementById('drawer');
+            if (drawer.classList.contains('active')) {
+                drawer.classList.remove('active');
+            }
         }
-    });
+    };
 
     function openLightbox(imageSrc) {
         const lightbox = document.getElementById('lightbox');
-        const lightboxImg = lightbox.querySelector('img');
-        lightboxImg.src = imageSrc;
-        lightbox.classList.add('active');
+        const lightboxImage = lightbox.querySelector('img');
+        lightboxImage.src = imageSrc;
+        lightbox.style.display = 'flex';
     }
 
     function closeLightbox() {
-        const lightbox = document.getElementById('lightbox');
-        lightbox.classList.remove('active');
+        document.getElementById('lightbox').style.display = 'none';
     }
 </script>
 
