--- a/products.html
+++ b/products.html
@@ -259,7 +259,7 @@
     <nav class="drawer" id="drawer">
         <div class="drawer-group">
             <a href="index.html">Home Page</a>
-            <a href="products.html">Products Page</a>
+            <a href="Prices and orders.html">Prices Page</a>
             <a href="#about">About Us</a>
             <a href="#products">Our Products</a>
         </div>
