--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         <ul class="contact-list">
             <li><a href="tel:+27832546387"><img src="icons/phone icon.jpeg" alt="Phone Icon"></a></li>
             <li><a href="mailto:benjamin@ngwenyaforestry.co.za"><img src="icons/email icon.png" alt="Email Icon"></a></li>
-            <li><a href="https://facebook.com/https:/valley.view.farm.2025" target="_blank"><img src="icons/facebook icon.png" alt="Facebook Icon"></a></li>
+            <li><a href="https://www.facebook.com/valley.view.farm.2025?mibextid=ZbWKwL" target="_blank"><img src="icons/facebook icon.png" alt="Facebook Icon"></a></li>
             <li><a href="https://wa.me/+27832546387" target="_blank"><img src="icons/whatsapp icon.png" alt="WhatsApp Icon"></a></li>
             <li><a href="https://instagram.com/valley.view.farm.2025" target="_blank"><img src="icons/instagram icon.png" alt="Instagram Icon"></a></li>
         </ul>
