Update Prices and orders.html

--- a/Prices and orders.html
+++ b/Prices and orders.html
@@ -177,6 +177,41 @@
             color: #4CAF50;
             margin-bottom: 5px;
         }
+		
+		.operating-hours-container {
+            background-color: #ffffff;
+            border-radius: 12px;
+            padding: 20px;
+            margin-top: 40px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            max-width: 97%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .operating-hours-section h1 {
+            font-size: 2rem;
+            color: #2C6E49;
+            margin-bottom: 10px;
+        }
+
+        .operating-hours-section p {
+            font-size: 1.2rem;
+            color: #388E3C;
+            margin-bottom: 20px;
+        }
+
+        .operating-hours {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .operating-hours li {
+            font-size: 1.1rem;
+            color: #4CAF50;
+            margin-bottom: 5px;
+        }
 
         footer {
             background-color: #000;
@@ -201,6 +236,14 @@
             }
 
             .price-list-section h1 {
+                font-size: 1.8rem;
+            }
+			
+			.operating-hours-section {
+                padding-left: 20px;
+            }
+
+            .operating-hours-section h1 {
                 font-size: 1.8rem;
             }
 
@@ -272,6 +315,20 @@
             <li>Roosters live - R150</li>
             <li>Rooster slaughtered - R160</li>
             <li>Vegetables available</li>
+        </ul>
+    </div>
+</section>
+
+<section class="operating-hours-container">
+    <div class="operating-hours-section">
+        <h1>Operating Hours</h1>
+        <p>We are open during the following hours to serve you:</p>
+        <ul class="operating-hours-list">
+            <li>Monday - Friday: 8:00 AM - 6:00 PM</li>
+            <li>Saturday: 9:00 AM - 5:00 PM</li>
+            <li>Sunday: Closed</li>
+            <li>We can always be reached through our contact list which is accessible through the website choose the platform which is best for and make contact</li>
+            <li>Thank you for choosing Valley View Farms as your first destination for the best agricultral products</li>
         </ul>
     </div>
 </section>
