--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
         </ul>
 
         <h3>Our Location</h3>
-        <p>We are located in Msholozi Stand no: 81021 Whiterive: 1201 near Msholozi Butchery. Below is a map to Msholozi Butchery:</p>
-        <a href="https://www.google.com/maps/search/msholozi+butchery/@-25.3334641,30.9312121,12z" target="_blank" class="google-map-link">
+        <p>We are located in Msholozi Stand no: B1021 near Woza Woza:</p>
+        <a href="https://www.google.com/maps/place/25%C2%B020'46.9%22S+30%C2%B057'55.9%22E/@-25.3463997,30.9655673,19z/data=!4m4!3m3!8m2!3d-25.3463611!4d30.9655278?source=lnms" target="_blank" class="google-map-link">
             <img src="icons/google maps icon.png" alt="Google Maps Icon">
         </a>
     </div>
